--- a/index.html
+++ b/index.html
@@ -33,25 +33,23 @@
     
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<button class="btn btn-light" id="menu-toggle" style="margin-right: 10px;">
-				<a>
-					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-					  <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-					</svg>
-				</a>
-			</button>
-			  <a class="navbar-brand" href="#">Navbar</a>
-			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-				  <li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
-				  </li>
-				</ul>
-			  </div>
+            <nav class="navbar navbar-dark bg-dark">
+				<button class="btn-burger" id="menu-toggle" style="margin-right: 10px;">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="menu">
+					<ul class="navbar-nav">
+					  <li class="nav-item active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="#">Features</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="#">Pricing</a>
+					  </li>
+					</ul>
+				</div>
 			</nav>
         </div>
         <!-- /#page-content-wrapper -->
